# FAAST

./: README.md
.github/workflows/: pylint.yml
assignments/: README.md  pyproject.toml
assignments/life_expectancy/: Country.py  __init__.py  cleaning.py  data_cleaning.py  file_processor.py  loading_saving_data.py  pyproject.toml
assignments/life_expectancy/data/: life_expectancy_convert_date_format.json  life_expectancy_filter_region.json  mock_file_path.tsv  unpivot_response.csv
assignments/life_expectancy/tests/: __init__.py  conftest.py  pyproject.toml  test_cleaning.py  test_cleaning_data_new.py  test_country.py  test_load_save_data_new.py
assignments/life_expectancy/tests/fixtures/: fixtures.py  life_expectancy_original.json  life_expectancy_unpivot.json  mock_file_path.csv
