[project]
name = "assignments"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
description = "First assignment of the FAAST Advance Foundations"
authors = [
    {name = "Carolina Marreiros"}
]
dependencies = ["pandas"]

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov"]

[tool.setuptools]
packages = ["life_expectancy"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80
[tool.pylint.main]

[tool.pylint."messages control"]
disable = [
   "missing-module-docstring",
   "missing-class-docstring",
   "too-few-public-methods",
   "missing-function-docstring",
   "line-too-long",
   "invalid-name",
]